appId: ${APP_ID}
---

- runScript: ../../../screens/Benefits/DrugPricingScreen.js
- runScript: ../../../screens/Common/CommonScreen.js
- runScript: ../../../screens/Benefits/BenefitsDashboardScreen.js
- assertNotVisible: ${output.benefits_drug_pricing.member}
- assertVisible: ${output.common_navigation.year2025}
- assertVisible: ${output.common_navigation.year2026}

- assertVisible: ${output.benefits_pharmacy_spending.viewPrescriptionClaims}
- tapOn: ${output.benefits_pharmacy_spending.viewPrescriptionClaims}
- assertVisible: ${output.benefits_home.claimsCard}
- runFlow:
    when:
      true: ${maestro.platform == 'android'}
    commands:
      - pressKey: Back

- runFlow:
    when:
      true: ${maestro.platform == 'ios'}
    commands:
      - tapOn: ${output.benefits_home.back}
- assertVisible: ${output.benefits_home.prescriptionSummary}