# Subflow: Schedule a Vaccine Signed In Flow
# Purpose: Validate Schedule a Vaccine Flow on Help Center as Signed In User
# Prerequisite: Must be on Help Center screen with Schedule a Vaccine link visible
appId: ${APP_ID}
---
- runScript: ../../screens/Common/CommonScreen.js
- runScript: ../../screens/Health/MinuteClinicSchedulingScreen.js
- runScript: ../../screens/SearchAndNav/SNAPPScreen.js

- assertVisible: ${output.snapp_navigation.removeButton}

- assertVisible: ${output.snapp_navigation.scheduleAVaccineButton}
- tapOn: ${output.snapp_navigation.scheduleAVaccineButton}

- waitForAnimationToEnd

- assertVisible: ${output.health_scheduling.patientVaccineLabel}
- tapOn: ${output.common_buttons.backBtn}

- runFlow:
    when:
      visible: ${output.snapp_navigation.removeButton}
    commands:
      - tapOn: ${output.snapp_navigation.removeButton}