# Subflow: Validate HAIO Button
# Purpose: Validate HAIO button by verifying the navigation by tapping it and going back to the original screen
# Prerequisite: Must have HAIO button visible on screen
appId: ${APP_ID}
---
- runScript: ../../screens/Common/CommonScreen.js
- runScript: ../../screens/HAIO/HomeScreen.js
- runScript: ../../screens/SearchAndNav/searchNavObjects.js

- assertVisible: ${output.common_buttons.chatBtn}
- tapOn: ${output.common_buttons.chatBtn}
- waitForAnimationToEnd
- assertVisible: ${output.haio_home.healthAssistantTitle}
- assertVisible: ${output.haio_home.greetingMsg}
- tapOn: ${output.common_buttons.backBtn}
- waitForAnimationToEnd

- assertVisible: ${output.common_buttons.chatBtn}